Moving code around in reports